prevent too wide screen & make nav icon  more faster

--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -52,15 +52,15 @@
   }
 }
 .nav__btn {
-  animation: navAnimation 1s ease-in-out forwards;
+  animation: navAnimation 0.6s ease-in-out forwards;
   transform: translateY(50px);
 }
 .nav__btn:nth-child(2) {
   animation-delay: 0.2s;
 }
 .nav__btn:nth-child(3) {
-  animation-delay: 0.5s;
+  animation-delay: 0.4s;
 }
 .nav__btn:last-child {
-  animation-delay: 0.8s;
+  animation-delay: 0.6s;
 }
